# poketracker

./: .cursorrules  .env.example  .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
docs/: README.md  VERSION-HISTORY.md  temp-research-tracker.md
docs/procedures/: INDEX.md  cursorrules-update.md  markdown-creation.md
docs/project/: README.md  allenatore-dashboard.md  architecture-overview.md  core-functionality.md  database-storage.md  deployment.md  error-handling.md  features.md  glossary.md  knowledge-database.md  loading-and-sync-ux.md  multi-profile.md  notifications-and-error-archive.md  offline-data-strategy.md  overview.md  parser-architecture.md  parser-inventory.md  performance.md  piano-sviluppo-iniziale.md  pokedex-parser-strategy.md  pokedex-personal.md  pokedex-sprites.md  poketrack-reference.md  priorities.md  project-structure.md  sav-game-version-detection.md  save-editor.md  security.md  self-management.md  testing-strategy.md  ui-component-catalog.md  (+5 more)
scripts/: add-cargo-to-path.ps1  cargo-check.mjs  download-pokedex-sprites.mjs  generate-icon.mjs  reinstall-rust-user.ps1  run-tauri.mjs
src/: app.css  app.d.ts  app.html
src-sidecar/: PkHexPokedexProbe.cs  PokeTracker.Parser.csproj  Program.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: error_archive.rs  export_backup.rs  mod.rs  profile.rs  save_detect.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
(+149 files in other folders)
