[package]
name = "poketracker"
version = "0.2.2"
description = "PokeTracker - Pokedex personale e gestione salvataggi Pokemon"
edition = "2021"

[lib]
name = "poketracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = { version = "1", features = [] }
notify = "6"
